Update readme a little

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+# Running Stream - Your Channel
+
+This is the Roku channel portion of the Running Stream Your Channel service.
+
 ## Credits
 
 * Icons made by https://www.freepik.com from https://www.flaticon.com
